<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.purdue.combinekarttruck.MainLoginActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView00"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/filling_space"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_message"
        android:textSize="60sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <!--<TextView-->
            <!--android:id="@+id/TextView01"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/filling_space"-->
            <!--android:textSize="30sp" />-->

        <TextView
            android:id="@+id/textViewCurVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor= "#ff0000"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filling_space"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/login_type_message"
            android:textSize="55sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupLoginVehicleType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <RadioButton
            android:id="@+id/radioButtonCombine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onVehicleTypeRadioButtonClicked"
            android:text="@string/vehicle_combine"
            android:textSize="45sp" />

        <RadioButton
            android:id="@+id/radioButtonKart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onVehicleTypeRadioButtonClicked"
            android:text="@string/vehicle_kart"
            android:textSize="45sp" />

        <RadioButton
            android:id="@+id/radioButtonTruck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onVehicleTypeRadioButtonClicked"
            android:text="@string/vehicle_truck"
            android:textSize="45sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/LinearLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filling_space"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/login_id_message"
            android:textSize="55sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextLoginVehicleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/login_id_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="45sp">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button_pick_from_a_list"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_login_ok"
            android:onClick="pickFromList"
            android:text="@string/button_pick_from_a_list"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/filling_space"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_login_ok"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/color_login_ok"
        android:onClick="logIn"
        android:text="@string/button_ok"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/filling_space"
        android:textSize="40sp" />

</LinearLayout>